--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,14 @@
 body {
   background-color: white;
   color: black;
-  font-family: Arial, sans-serif;
   text-align: center;
-  margin-top: 100px;
+  font-family: system-ui;
+  font-size: 1.6rem;
+  line-height: 2.5rem;
 }
-
+.header{
+  
+}
 .card {
   display: flex;
   flex-direction: column;
@@ -39,7 +42,7 @@ body {
 .button {
   display: block;
   width: 250px;
-  height: 40px;
+  height: 47px;
   background-color: rgb(10, 10, 10);
   color: white;
   text-decoration: none;
@@ -48,13 +51,14 @@ body {
   margin-bottom: 10px;
   border-radius: 9px;
   margin-top: 30px;
+  border: 4px solid #ebeba2;
 }
 
 .button1 {
   display: block;
   width: 250px;
-  height: 40px;
-  background-color: rgb(37, 32, 70);
+  height: 47px;
+  background-color: rgb(10, 10, 10);
   color: white;
   text-decoration: none;
   font-size: 18px;
@@ -62,26 +66,42 @@ body {
   margin-bottom: 10px;
   border-radius: 9px;
   margin-top: 30px;
+  border: 4px solid #f1b47f;
 }
 
 .buttonBD {
   display: block;
+    width: 250px;
+    height: 47px;
+    background-color: rgb(255 255 255);
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 40px;
+    margin-bottom: 10px;
+    border-radius: 9px;
+    margin-top: 30px;
+    border: 1.8px solid #999999;
+    
+}
+.buttonETL{
+  display: block;
   width: 250px;
-  height: 40px;
-  background-color: rgb(90, 94, 97);
-  color: white;
+  height: 47px;
+  background-color: #fdd56ade;
+  color: black;
   text-decoration: none;
   font-size: 18px;
   line-height: 40px;
   margin-bottom: 10px;
   border-radius: 9px;
   margin-top: 30px;
+  border: 1.8px solid #999999;
 }
-
 .arrow-button {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
+  /* bottom: 20px;
+  right: 20px; */
   width: 50px;
   height: 50px;
   background-color: rgb(5, 5, 5);
@@ -91,6 +111,8 @@ body {
   font-size: 24px;
   line-height: 50px;
   cursor: pointer;
+  top: 3.5rem;
+  right: 3rem;
 }
 
 #chart-type {
@@ -98,6 +120,22 @@ body {
 }
 a {
   color: black;
+  text-decoration: none;
+}
+
+button-a{
+  display: block;
+  width: 250px;
+  height: 47px;
+  background-color: rgb(255 255 255);
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 40px;
+  margin-bottom: 10px;
+  border-radius: 9px;
+  margin-top: 30px;
+  border: 2px solid #f1b47f;
 }
 table {
   border-collapse: collapse;
@@ -127,10 +165,22 @@ tr:nth-child(even) {
   font-size: 0.8rem;
 }
 .subtitles {
-  color: black;
+text-decoration: none;
   font-size: 2rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  display: block;
+  width: 250px;
+  height: 47px;
+  background-color: rgb(255 255 255);
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 40px;
+  margin-bottom: 10px;
+  border-radius: 9px;
+  margin-top: 30px;
+  border: 2px solid #f1b47f;
 }
 .oculto {
   display: none;
