--- a/styles.css
+++ b/styles.css
@@ -67,9 +67,12 @@ nav {
 
 .chart-container {
   width: 100%;
+  height: 100%;
   max-width: 600px;
   display: flex;
   justify-content: center;
+  overflow-x: scroll;
+  overflow-y: scroll;
 }
 
 .title {
