--- a/styles.css
+++ b/styles.css
@@ -66,13 +66,50 @@ nav {
 }
 
 .chart-container {
-  width: 100%;
-  height: 100%;
-  max-width: 600px;
+  width: calc(100vw - 15rem);
+  height: calc(100vh - 32rem);
+  max-width: 100vw;
   display: flex;
   justify-content: center;
   overflow-x: scroll;
   overflow-y: scroll;
+
+}
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #888888 #8b8b8b;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  width: 6px;
+  width: 6px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #FF8F46;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #000000;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #E9E9E9;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #FF8F46;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #FF8F46;
 }
 
 .title {
