--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,21 @@ nav {
   margin-top: 30px;
   border: 1.8px solid #999999;
 }
+.buttonData{
+  display: block;
+    width: 250px;
+    height: 47px;
+    background-color: rgb(255 255 255);
+    text-align: center;
+    color: #ff8f46;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 40px;
+    margin-bottom: 10px;
+    border-radius: 9px;
+    margin-top: 30px;
+    border: 1.8px solid #ff8f46;
+}
 .arrow-button {
   position: absolute;
   /* bottom: 20px;
