Se actualizan estilos y calculo para retirados

--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ nav {
   font-size: 24px;
   line-height: 50px;
   cursor: pointer;
-  top: 3.5rem;
+  top: 2rem;
   right: 3rem;
 }
 
@@ -268,6 +268,7 @@ tr:nth-child(even) {
   justify-content: center;
   align-items: center;
   font-size: 0.8rem;
+  margin-top: 4rem;
 }
 .subtitles {
 text-decoration: none;
