Se añade vista apra exito o fracaso de permanencia

--- a/styles.css
+++ b/styles.css
@@ -312,3 +312,8 @@ text-decoration: none;
   right: 3rem;
 
 }
+.two{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
