--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,10 @@ nav {
 
 }
 
+.textSmall{
+  font-size: 1rem;
+    line-height: 1rem;
+}
 * {
   scrollbar-width: thin;
   scrollbar-color: #acabab #8b8b8b;
